# slint-framebuffer-example-licheerv-nano

./: .gitignore  Cargo.toml  README.md  run-on-target.sh  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
ui/: appwindow.slint
