[package]
name = "slint-framebuffer-example"
version = "0.1.0"
authors = ["Niklas Cathor <niklas.cathor@gmx.de>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = { version = "3.4.1", features = ["termination"] }
linuxfb = { git = "https://gitlab.com/ur8us/rust-linuxfb.git", rev="447f1bba" }
# linuxfb = { git = "https://gitlab.com/nilclass/rust-linuxfb.git" }
# linuxfb = { path = "../rust-linuxfb" }
evdevil = "0.3.3"

[dependencies.slint]
version = "1.14.1"
default-features = false
features = ["compat-1-2", "std", "software-renderer-systemfonts"]

[build-dependencies]
slint-build = "1.14.1"

[features]
use_double_buffering = []
color_32bit =[]
default = ["use_double_buffering", "color_32bit"]
# default = ["color_32bit"]




